--- a/Pages/Cliente/Cliente.razor
+++ b/Pages/Cliente/Cliente.razor
@@ -2,7 +2,7 @@
 @inject IJSRuntime JSRuntime;
 @inject IClienteServices clienteServices;
 @attribute [Authorize]
-
+<PageTitle>Yoja's Drinks & Heladeria Los Paso</PageTitle>
 <style>
     /* Estilo para resaltar las filas al pasar el cursor */
     .table-hover tbody tr:hover {
