--- a/Pages/Facturacion/AddFactura.razor
+++ b/Pages/Facturacion/AddFactura.razor
@@ -2,7 +2,7 @@
 @using FactuSystem.Data.Request;
 @using FactuSystem.Data.Response;
 @inject IJSRuntime JSRuntime;
-
+<PageTitle>Yoja's Drinks & Heladeria Los Paso</PageTitle>
 
 <EditForm Model="facturaRequest" OnValidSubmit="Send">
     @*Disenar el espacio para el cliente o contacto a facturarle*@
