--- a/Pages/Facturacion/FacturaContado.razor
+++ b/Pages/Facturacion/FacturaContado.razor
@@ -27,7 +27,7 @@
         padding: 10px; /* Añadir espacio alrededor del texto */
     }
 </style>
-
+<PageTitle>Yoja's Drinks & Heladeria Los Paso</PageTitle>
 @if(Form)
 {
     <EditForm Model="facturaRequest" OnValidSubmit="Send">
