--- a/Pages/Producto/Producto.razor
+++ b/Pages/Producto/Producto.razor
@@ -30,7 +30,7 @@
         padding: 10px; /* Añadir espacio alrededor del texto */
     }
 </style>
-
+<PageTitle>Yoja's Drinks & Heladeria Los Paso</PageTitle>
 <h1 class="titulo-proveedores">Listado de Productos</h1>
 
 <div class="modal" style="display: @(showCard ? "block" : "none"); background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%);" tabindex="-1" role="dialog">
