--- a/Pages/Proveedor/Proveedor.razor
+++ b/Pages/Proveedor/Proveedor.razor
@@ -1,7 +1,7 @@
 @page "/proveedor"
 @inject IJSRuntime JSRuntime;
 @attribute [Authorize]
-
+<PageTitle>Yoja's Drinks & Heladeria Los Paso</PageTitle>
 <style>
     /* Estilo para resaltar las filas al pasar el cursor */
     .table-hover tbody tr:hover {
