--- a/Pages/Facturacion/AddFactura.razor
+++ b/Pages/Facturacion/AddFactura.razor
@@ -34,8 +34,8 @@
 
     @*Disenar el espacio para los productos a facturar*@
     <div class="card p-2 d-print-none">
-        <div class="card-header card-title" style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
-            <h5>¿Que desea el cliente?</h5>
+        <div class="card-header card-title">
+            <strong>¿Que desea el cliente?</strong>
         </div>
         <div class="input-group mb-3 mt-2">
             <input class="form-control"
