--- a/Pages/Facturacion/FacturaCredito.razor
+++ b/Pages/Facturacion/FacturaCredito.razor
@@ -52,8 +52,8 @@
 
         @*Disenar el espacio para los productos a facturar*@
         <div class="card p-2 d-print-none">
-            <div class="card-header card-title" style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
-                <h5>¿Que desea el cliente?</h5>
+            <div class="card-header card-title">
+                <strong>¿Que desea el cliente?</strong>
             </div>
             <div class="input-group mb-3 mt-2">
                 <input class="form-control"
@@ -131,12 +131,12 @@
                                     @bind-Value="@detalle.Cantidad" readonly/>
                                 <div class="col d-print-none">
                                     <div class="form-group">
-                                        <span @onclick="()=>Add(detalle.ProductoId)" 
+                                        <span @onclick="async()=>{await Add(detalle.ProductoId);}" 
                                             class="oi oi-caret-top">
                                         </span>
                                     </div>
                                     <div class="form-group">
-                                        <span @onclick="()=>Remove(detalle.ProductoId)" 
+                                        <span @onclick="async()=>{await Remove(detalle.ProductoId);}" 
                                             class="oi oi-caret-bottom">
                                         </span>
                                     </div>
@@ -165,7 +165,7 @@
                         </td>
                         <td>
                             <button type="button" class="btn btn-outline-danger d-print-none"
-                                @onclick="()=>EliminarDetalle(detalle.ProductoId)">
+                                @onclick="async()=>{await EliminarDetalle(detalle.ProductoId);}">
                                 <span 
                                     class="oi oi-trash">
                                 </span>
@@ -760,32 +760,57 @@ else
         var c = Contactos.FirstOrDefault(p => p.Nombre+" "+p.Apellidos == Contacto)!;
         if (c != null) facturaRequest.ClienteId = c.Id;
     }
-    void Add(int Id){
+    async Task Add(int Id){
         var detalle = facturaRequest.Detalles
         .FirstOrDefault(d => d.ProductoId == Id);
         var Cant = 1;
-        detalle.Cantidad += Cant;
-        productoServices.ActualizarStock(detalle.ProductoId, Cant);
-        Send();
+        var producto = Productos.FirstOrDefault(p => p.Id == Id);
+        int NewStock = detalle.Cantidad + Cant;
+
+        if (NewStock <= producto.Stock)
+        {
+            detalle.Cantidad += Cant;
+            await productoServices.ActualizarStock(detalle.ProductoId, Cant);
+            await Send();
+            NewStock = 0;
+        }
+        else
+        {
+            Message = "No hay suficientes artículos en el stock. 😥";
+            return;
+        }
     }
-    void Remove(int Id){
+    async Task Remove(int Id){
         var detalle = facturaRequest.Detalles
         .FirstOrDefault(d => d.ProductoId == Id);
         var Cant = 1;
-        detalle.Cantidad -= Cant;
-        productoServices.StockDevuelto(detalle.ProductoId, Cant);
-        Send();
+        var producto = Productos.FirstOrDefault(p => p.Id == Id);
+        int NewStock = detalle.Cantidad - Cant;
+
+        if (NewStock >= 1)
+        {
+            detalle.Cantidad -= Cant;
+            await Send();
+            await productoServices.StockDevuelto(detalle.ProductoId, Cant);
+            NewStock = 0;
+        }
+        else
+        {
+            Message = "Debes dejar al menos un articulo. 😥";
+            return;
+        }
     }
-    void EliminarDetalle(int Id)
+    async Task EliminarDetalle(int Id)
     {
         var detalle = facturaRequest.Detalles
         .FirstOrDefault(d => d.ProductoId == Id);
         // Actualizar el stock del producto en la base de datos
-        productoServices.StockDevuelto(detalle.ProductoId, detalle.Cantidad);
+        await productoServices.StockDevuelto(detalle.ProductoId, detalle.Cantidad);
         if (detalle != null)
         {
             facturaRequest.Detalles.Remove(detalle);
         }
+        await Send();
     }
     async Task AgregarAlDetalle()
     {
@@ -840,10 +865,11 @@ else
             // Actualizar el stock del producto en la base de datos
             await productoServices.ActualizarStock(IdProducto, Cantidad);
 
-            Send();
+            await Send();
             Message = null;
         }
     }
+   
    async Task CargarContacto()
     { 
         //Llenar la lista de contactos para mostrar al usuario...
