--- a/_Imports.razor
+++ b/_Imports.razor
@@ -14,6 +14,8 @@
 
 @inject NavigationManager urlHelper;
 @inject IProductoServices productoServices;
+@inject IProveedorServices proveedorServices;
 @inject ICategoriaServices categoriaServices;
 @inject IClienteServices clienteServices;
 @inject IUsuarioServices usuarioServices;
+@inject ICuadrarCajaServices cuadrarCajaServices;
