--- a/Pages/Proveedor/Proveedor.razor
+++ b/Pages/Proveedor/Proveedor.razor
@@ -34,7 +34,7 @@
 <h1 class="titulo-proveedores">Listado de Proveedores</h1>
 
 
-<div class="modal" style="display: @(showCard ? "block" : "none"); background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%);" tabindex="-1" role="dialog">
+<div class="modal" style="display: @(showCard ? "block" : "none"); background-color: rgba(0, 0, 0, 0.5);" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header bg-dark text-white">
